# kustomize-tools

./: .dockerignore  Cargo.toml  Dockerfile  README.md
ci/: vars.yaml
src/: main.rs
src/cli/: mod.rs  replace_tag.rs
